fixed black ul li on mobile teachers, again

--- a/src/assets/scss/_teachers.scss
+++ b/src/assets/scss/_teachers.scss
@@ -36,7 +36,7 @@
           background-color: white;
         }
         font-size: 1.2rem;
-        color: var(--color-black);
+        color: black;
         border-radius: 10px;
         &:hover {
           transform: scale(1.05);
